# gotransit-python

./: LICENSE  README.md  pyproject.toml
src/gotransit/: __init__.py  client.py
