[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gotransit"
version = "1.0.0"
description = "A Python wrapper for the GO Transit GTFS API"
keywords = ["gotransit", "metrolinx", "transit", "api", "python"]
readme = "README.md"
authors = [
    { name = "Kenrick Zhang", email = "kenrickzhang16@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]
